--- a/My-Portfolio-main/My-Portfolio-main/index.html
+++ b/My-Portfolio-main/My-Portfolio-main/index.html
@@ -70,7 +70,7 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text padd-15">
-                                    <h3>I'm Adeniyi Oluwateniayomi and <span class="center">Web Developer</span></h3>
+                                    <h3>I'm Adeniyi Oluwateniayomi</h3>
                                     <p>Adeniyi Oluwateniayomi is an accomplished backend developer currently making significant contributions at Rumoney. Her passion lies in building robust and efficient systems that enhance user experiences. Aspiring to become a highly proficient backend engineer and an AWS DevOps engineer, Oluwateniayomi is committed to continuous learning and innovation. Most Impressive and Relevant Achievements: Successfully designed and implemented a scalable backend architecture for a high-traffic gaming platform, resulting in significant performance improvements and enhanced user experiences. Implemented automated testing and continuous integration practices, which led to a 40% reduction in production bugs and a 50% faster deployment cycle. Contributed to an open-source project used by a community, demonstrating a commitment to giving back to the developer community and collaborating on impactful projects. Driven by a desire for excellence, Oluwateniayomi eagerly seeks opportunities to expand his skill set and stay at the forefront of cutting-edge technologies. While aspiring to become an AWS DevOps engineer, she is focused on honing her technical prowess and making a meaningful impact in the realm of backend development.</p>
                                 </div>
                             </div>
@@ -356,7 +356,7 @@
                             <p><a href="https://wa.me/+2348027062728" class="contact-link"><i class="fas fa-paper-plane"></i>08027062728</a></p>
                             <div class="social-icons">
                                 <a href="https://www.facebook.com/baby.boi.965580"><i class="fab fa-facebook"></i></a>
-                                <a href="https://twitter.com/dcolddev"><i class="fab fa-twitter-square"></i></a>
+                                <a href="https://twitter.com/dcolddev"><i class="fa-brands fa-x-twitter"></i></a>
                                 <a href="https://www.instagram.com/t3chie_t3n10/"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.linkedin.com/in/oluwateniayomi-adeniyi-524490241/><i class="fab fa-linkedin"></i></a>
                             </div>
@@ -389,6 +389,10 @@
                                             <span>Hi there!</span> I'm Oluwateniayomi Adeniyi, a proactive and resourceful Backend Node Developer with a passion for innovation and a track record of building robust web applications. I also have a keen interest in AWS, the leading cloud computing platform. As a self-managed individual, I take ownership of my work and thrive in delivering results. My top 3 skills include delivering high-quality solutions, fostering collaboration, and tackling complex challenges. What sets me apart is my commitment to continuous learning and staying ahead in the ever-evolving tech landscape. By leveraging my expertise in backend development and my ability to work seamlessly with teams, I can streamline processes and drive efficiency in your projects. Whether it's optimizing performance or finding creative solutions, I'm always ready to take initiative and deliver beyond expectations. I'm the best person to offer these skills as I bring dedication, creativity, and a problem-solving mindset to the table. With my proactive and self-managed approach, you can count on a reliable partner who takes ownership and ensures projects run smoothly. By choosing me, you'll have a skilled and innovative team player who can make your life easier by delivering top-notch results and optimizing your operations. My ask from you is to consider me for any backend development opportunities or projects that require a proactive, resourceful, and self-managed professional. Together, we can achieve remarkable outcomes and make a meaningful impact. Let's connect and discuss how I can contribute to your success. Thank you for your time!
                                         </p>
                                     </div>
+                                </div>
+                                <br>
+                                <div class="buttons padd-15">
+                                    <a href="./images/Alx pitch video.mp4" class="btn hire-me">Elevator Pitch</a>
                                 </div>
                             </div>
                         </div>
