Remove old pitch video

--- a/My-Portfolio-main/My-Portfolio-main/index.html
+++ b/My-Portfolio-main/My-Portfolio-main/index.html
@@ -392,7 +392,7 @@
                                 </div>
                                 <br>
                                 <div class="buttons padd-15">
-                                    <a href="./images/Alx pitch video.mp4" class="btn hire-me">Elevator Pitch</a>
+                                    <a href="./images/pitch video.mp4" class="btn hire-me">Elevator Pitch</a>
                                 </div>
                             </div>
                         </div>
